--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 # example netlify.toml
 [build]
   command = "hugo"
-# functions = "netlify/functions"
+  functions = "netlify/functions"
   publish = "public"
 
 [build.environment]
@@ -10,8 +10,7 @@
 [[plugins]]
   package = "netlify-plugin-cypress"
 
-  [plugins.inputs.postBuild]
-    enable = true
-
   [plugins.inputs]
-    enable = True
+    enable = true
+    postBuild = true
+
