--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,12 @@
 # example netlify.toml
 [build]
-  command = "hugo"
-  functions = "netlify/functions"
-  publish = "public"
-
+publish = "./exampleSite/public/"
+command = "npm run deploy"
 [build.environment]
-  HUGO_VERSION = "0.146.5"
+HUGO_VERSION = "0.128.0"
+HUGO_ENV = "production"
+GO_VERSION = "1.23"
+NODE_ENV = "development"
 
 [[plugins]]
   package = "netlify-plugin-cypress"
