--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,11 @@
 # example netlify.toml
 [build]
-publish = "./exampleSite/public/"
-command = "npm run deploy"
+  command = "hugo"
+  functions = "netlify/functions"
+  publish = "public"
+
 [build.environment]
-HUGO_VERSION = "0.128.0"
-HUGO_ENV = "production"
-GO_VERSION = "1.23"
-NODE_ENV = "development"
+  HUGO_VERSION = "0.146.5"
 
 [[plugins]]
   package = "netlify-plugin-cypress"
