--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 baseURL: "http://hugo-quickstart-template.netlify.com"
 languageCode: "en-us"
-title: "Netlify + Hugo Quickstart"
+title: "Dani"
 theme: "gohugo-theme-ananke"
 
